# agentic-tabular-pipeline

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
configs/: experiment_example.yaml  model_zoo.yaml
data/: README.md
data/raw/: credit.csv
notebooks/: demo_end_to_end.ipynb
reports/: sample_report.md
scripts/: generate_demo_dataset.py
src/: __init__.py
src/agents/: __init__.py  autoencoder_agent.py  base.py  cleaning_agent.py  data_profile_agent.py  deployment_agent.py  evaluator_agent.py  feature_agent.py  optimization_agent.py  problem_agent.py  report_agent.py  split_agent.py  trainer_agent.py
src/api/: __init__.py  admin.py  main.py  security.py  store.py
src/db/: __init__.py  models.py
src/db/migrations/: 0001_initial_schema.sql  0002_experiment_access_token.sql
src/pipelines/: __init__.py  evaluation.py  persistence.py  preprocessing.py  training.py
src/ui/: __init__.py  api_client.py  app.py  mock_data.py
tests/: test_admin_auth.py  test_api.py  test_api_client.py  test_autoencoder_agent.py  test_cleaning_agent.py  test_data_profile_agent.py  test_data_quality.py  test_deployment_agent.py  test_evaluator_agent.py  test_feature_agent.py  test_optimization_agent.py  test_pipeline_reproducibility.py  test_problem_agent.py  test_report_agent.py  test_run_experiment.py  test_split_agent.py  test_trainer_agent.py
