[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-tabular-pipeline"
version = "0.1.0"
description = "Sistema agentivo open source para pipeline de dados tabulares (MAQ020)"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "MIT" }

dependencies = [
    # Núcleo de dados e modelos clássicos
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "scipy>=1.10",
    # Deep learning (autoencoders tabulares)
    "torch>=2.0",
    # Otimização de hiperparâmetros
    "optuna>=3.4",
    # Configuração e validação
    "pyyaml>=6.0",
    "pydantic>=2.0",
    # Persistência
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    # API e interface
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "streamlit>=1.30",
    "httpx>=0.27",  # cliente HTTP usado pela UI para chamar a API
]

[project.optional-dependencies]
boost = ["xgboost>=2.0", "lightgbm>=4.0", "catboost>=1.2"]
explain = ["shap>=0.44"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "ruff>=0.3",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
